parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> lista_declaracoes
Rule 2     lista_declaracoes -> lista_declaracoes declaracao
Rule 3     lista_declaracoes -> declaracao
Rule 4     declaracao -> declaracao_variaveis
Rule 5     declaracao -> inicializacao_variaveis
Rule 6     declaracao -> declaracao_funcao
Rule 7     declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis
Rule 8     inicializacao_variaveis -> atribuicao
Rule 9     lista_variaveis -> lista_variaveis VIRGULA var
Rule 10    lista_variaveis -> var
Rule 11    var -> ID
Rule 12    var -> ID indice
Rule 13    indice -> indice ABRE_COLCHETE expressao FECHA_COLCHETE
Rule 14    indice -> ABRE_COLCHETE expressao FECHA_COLCHETE
Rule 15    tipo -> INTEIRO
Rule 16    tipo -> FLUTUANTE
Rule 17    declaracao_funcao -> tipo cabecalho
Rule 18    declaracao_funcao -> cabecalho
Rule 19    cabecalho -> ID ABRE_PARENTESE lista_parametros FECHA_PARENTESE corpo FIM
Rule 20    lista_parametros -> lista_parametros VIRGULA parametro
Rule 21    lista_parametros -> parametro
Rule 22    lista_parametros -> vazio
Rule 23    parametro -> tipo DOIS_PONTOS ID
Rule 24    parametro -> parametro ABRE_COLCHETE FECHA_COLCHETE
Rule 25    corpo -> corpo acao
Rule 26    corpo -> vazio
Rule 27    acao -> expressao
Rule 28    acao -> declaracao_variaveis
Rule 29    acao -> se
Rule 30    acao -> repita
Rule 31    acao -> leia
Rule 32    acao -> escreva
Rule 33    acao -> retorna
Rule 34    se -> SE expressao ENTAO corpo FIM
Rule 35    se -> SE expressao ENTAO corpo SENAO corpo FIM
Rule 36    repita -> REPITA corpo ATE expressao
Rule 37    atribuicao -> var ATRIBUICAO expressao
Rule 38    leia -> LEIA ABRE_PARENTESE var FECHA_PARENTESE
Rule 39    escreva -> ESCREVA ABRE_PARENTESE expressao FECHA_PARENTESE
Rule 40    retorna -> RETORNA ABRE_PARENTESE expressao FECHA_PARENTESE
Rule 41    expressao -> expressao_logica
Rule 42    expressao -> atribuicao
Rule 43    expressao_logica -> expressao_simples
Rule 44    expressao_logica -> expressao_logica operador_logico expressao_simples
Rule 45    expressao_simples -> expressao_aditiva
Rule 46    expressao_simples -> expressao_simples operador_relacional expressao_aditiva
Rule 47    expressao_aditiva -> expressao_multiplicativa
Rule 48    expressao_aditiva -> expressao_aditiva operador_soma expressao_multiplicativa
Rule 49    expressao_multiplicativa -> expressao_unaria
Rule 50    expressao_multiplicativa -> expressao_multiplicativa operador_multiplicacao expressao_unaria
Rule 51    expressao_unaria -> fator
Rule 52    expressao_unaria -> operador_soma fator
Rule 53    expressao_unaria -> operador_negacao fator
Rule 54    operador_relacional -> MENOR
Rule 55    operador_relacional -> MAIOR
Rule 56    operador_relacional -> IGUAL
Rule 57    operador_relacional -> DIFERENCA
Rule 58    operador_relacional -> MENOR_IGUAL
Rule 59    operador_relacional -> MAIOR_IGUAL
Rule 60    operador_soma -> MAIS
Rule 61    operador_soma -> MENOS
Rule 62    operador_logico -> E_LOGICO
Rule 63    operador_logico -> OU_LOGICO
Rule 64    operador_negacao -> NEGACAO
Rule 65    operador_multiplicacao -> MULTIPLICACAO
Rule 66    operador_multiplicacao -> DIVISAO
Rule 67    fator -> ABRE_PARENTESE expressao FECHA_PARENTESE
Rule 68    fator -> var
Rule 69    fator -> chamada_funcao
Rule 70    fator -> numero
Rule 71    numero -> NUM_INTEIRO
Rule 72    numero -> NUM_PONTO_FLUTUANTE
Rule 73    numero -> NUM_NOTACAO_CIENTIFICA
Rule 74    chamada_funcao -> ID ABRE_PARENTESE lista_argumentos FECHA_PARENTESE
Rule 75    lista_argumentos -> lista_argumentos VIRGULA expressao
Rule 76    lista_argumentos -> expressao
Rule 77    lista_argumentos -> vazio
Rule 78    vazio -> <empty>

Terminals, with rules where they appear

ABRE_COLCHETE        : 13 14 24
ABRE_PARENTESE       : 19 38 39 40 67 74
ATE                  : 36
ATRIBUICAO           : 37
DIFERENCA            : 57
DIVISAO              : 66
DOIS_PONTOS          : 7 23
ENTAO                : 34 35
ESCREVA              : 39
E_LOGICO             : 62
FECHA_COLCHETE       : 13 14 24
FECHA_PARENTESE      : 19 38 39 40 67 74
FIM                  : 19 34 35
FLUTUANTE            : 16
ID                   : 11 12 19 23 74
IGUAL                : 56
INTEIRO              : 15
LEIA                 : 38
MAIOR                : 55
MAIOR_IGUAL          : 59
MAIS                 : 60
MENOR                : 54
MENOR_IGUAL          : 58
MENOS                : 61
MULTIPLICACAO        : 65
NEGACAO              : 64
NUM_INTEIRO          : 71
NUM_NOTACAO_CIENTIFICA : 73
NUM_PONTO_FLUTUANTE  : 72
OU_LOGICO            : 63
REPITA               : 36
RETORNA              : 40
SE                   : 34 35
SENAO                : 35
VIRGULA              : 9 20 75
error                : 

Nonterminals, with rules where they appear

acao                 : 25
atribuicao           : 8 42
cabecalho            : 17 18
chamada_funcao       : 69
corpo                : 19 25 34 35 35 36
declaracao           : 2 3
declaracao_funcao    : 6
declaracao_variaveis : 4 28
escreva              : 32
expressao            : 13 14 27 34 35 36 37 39 40 67 75 76
expressao_aditiva    : 45 46 48
expressao_logica     : 41 44
expressao_multiplicativa : 47 48 50
expressao_simples    : 43 44 46
expressao_unaria     : 49 50
fator                : 51 52 53
indice               : 12 13
inicializacao_variaveis : 5
leia                 : 31
lista_argumentos     : 74 75
lista_declaracoes    : 1 2
lista_parametros     : 19 20
lista_variaveis      : 7 9
numero               : 70
operador_logico      : 44
operador_multiplicacao : 50
operador_negacao     : 53
operador_relacional  : 46
operador_soma        : 48 52
parametro            : 20 21 24
programa             : 0
repita               : 30
retorna              : 33
se                   : 29
tipo                 : 7 17 23
var                  : 9 10 37 38 68
vazio                : 22 26 77

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . lista_declaracoes
    (2) lista_declaracoes -> . lista_declaracoes declaracao
    (3) lista_declaracoes -> . declaracao
    (4) declaracao -> . declaracao_variaveis
    (5) declaracao -> . inicializacao_variaveis
    (6) declaracao -> . declaracao_funcao
    (7) declaracao_variaveis -> . tipo DOIS_PONTOS lista_variaveis
    (8) inicializacao_variaveis -> . atribuicao
    (17) declaracao_funcao -> . tipo cabecalho
    (18) declaracao_funcao -> . cabecalho
    (15) tipo -> . INTEIRO
    (16) tipo -> . FLUTUANTE
    (37) atribuicao -> . var ATRIBUICAO expressao
    (19) cabecalho -> . ID ABRE_PARENTESE lista_parametros FECHA_PARENTESE corpo FIM
    (11) var -> . ID
    (12) var -> . ID indice

    INTEIRO         shift and go to state 2
    FLUTUANTE       shift and go to state 8
    ID              shift and go to state 5

    programa                       shift and go to state 6
    declaracao_variaveis           shift and go to state 13
    declaracao_funcao              shift and go to state 1
    declaracao                     shift and go to state 9
    inicializacao_variaveis        shift and go to state 10
    atribuicao                     shift and go to state 11
    lista_declaracoes              shift and go to state 3
    tipo                           shift and go to state 4
    var                            shift and go to state 12
    cabecalho                      shift and go to state 7

state 1

    (6) declaracao -> declaracao_funcao .

    INTEIRO         reduce using rule 6 (declaracao -> declaracao_funcao .)
    FLUTUANTE       reduce using rule 6 (declaracao -> declaracao_funcao .)
    ID              reduce using rule 6 (declaracao -> declaracao_funcao .)
    $end            reduce using rule 6 (declaracao -> declaracao_funcao .)


state 2

    (15) tipo -> INTEIRO .

    DOIS_PONTOS     reduce using rule 15 (tipo -> INTEIRO .)
    ID              reduce using rule 15 (tipo -> INTEIRO .)


state 3

    (1) programa -> lista_declaracoes .
    (2) lista_declaracoes -> lista_declaracoes . declaracao
    (4) declaracao -> . declaracao_variaveis
    (5) declaracao -> . inicializacao_variaveis
    (6) declaracao -> . declaracao_funcao
    (7) declaracao_variaveis -> . tipo DOIS_PONTOS lista_variaveis
    (8) inicializacao_variaveis -> . atribuicao
    (17) declaracao_funcao -> . tipo cabecalho
    (18) declaracao_funcao -> . cabecalho
    (15) tipo -> . INTEIRO
    (16) tipo -> . FLUTUANTE
    (37) atribuicao -> . var ATRIBUICAO expressao
    (19) cabecalho -> . ID ABRE_PARENTESE lista_parametros FECHA_PARENTESE corpo FIM
    (11) var -> . ID
    (12) var -> . ID indice

    $end            reduce using rule 1 (programa -> lista_declaracoes .)
    INTEIRO         shift and go to state 2
    FLUTUANTE       shift and go to state 8
    ID              shift and go to state 5

    declaracao_variaveis           shift and go to state 13
    declaracao_funcao              shift and go to state 1
    declaracao                     shift and go to state 14
    inicializacao_variaveis        shift and go to state 10
    atribuicao                     shift and go to state 11
    tipo                           shift and go to state 4
    var                            shift and go to state 12
    cabecalho                      shift and go to state 7

state 4

    (7) declaracao_variaveis -> tipo . DOIS_PONTOS lista_variaveis
    (17) declaracao_funcao -> tipo . cabecalho
    (19) cabecalho -> . ID ABRE_PARENTESE lista_parametros FECHA_PARENTESE corpo FIM

    DOIS_PONTOS     shift and go to state 16
    ID              shift and go to state 15

    cabecalho                      shift and go to state 17

state 5

    (19) cabecalho -> ID . ABRE_PARENTESE lista_parametros FECHA_PARENTESE corpo FIM
    (11) var -> ID .
    (12) var -> ID . indice
    (13) indice -> . indice ABRE_COLCHETE expressao FECHA_COLCHETE
    (14) indice -> . ABRE_COLCHETE expressao FECHA_COLCHETE

    ABRE_PARENTESE  shift and go to state 19
    ATRIBUICAO      reduce using rule 11 (var -> ID .)
    ABRE_COLCHETE   shift and go to state 18

    indice                         shift and go to state 20

state 6

    (0) S' -> programa .



state 7

    (18) declaracao_funcao -> cabecalho .

    INTEIRO         reduce using rule 18 (declaracao_funcao -> cabecalho .)
    FLUTUANTE       reduce using rule 18 (declaracao_funcao -> cabecalho .)
    ID              reduce using rule 18 (declaracao_funcao -> cabecalho .)
    $end            reduce using rule 18 (declaracao_funcao -> cabecalho .)


state 8

    (16) tipo -> FLUTUANTE .

    DOIS_PONTOS     reduce using rule 16 (tipo -> FLUTUANTE .)
    ID              reduce using rule 16 (tipo -> FLUTUANTE .)


state 9

    (3) lista_declaracoes -> declaracao .

    INTEIRO         reduce using rule 3 (lista_declaracoes -> declaracao .)
    FLUTUANTE       reduce using rule 3 (lista_declaracoes -> declaracao .)
    ID              reduce using rule 3 (lista_declaracoes -> declaracao .)
    $end            reduce using rule 3 (lista_declaracoes -> declaracao .)


state 10

    (5) declaracao -> inicializacao_variaveis .

    INTEIRO         reduce using rule 5 (declaracao -> inicializacao_variaveis .)
    FLUTUANTE       reduce using rule 5 (declaracao -> inicializacao_variaveis .)
    ID              reduce using rule 5 (declaracao -> inicializacao_variaveis .)
    $end            reduce using rule 5 (declaracao -> inicializacao_variaveis .)


state 11

    (8) inicializacao_variaveis -> atribuicao .

    INTEIRO         reduce using rule 8 (inicializacao_variaveis -> atribuicao .)
    FLUTUANTE       reduce using rule 8 (inicializacao_variaveis -> atribuicao .)
    ID              reduce using rule 8 (inicializacao_variaveis -> atribuicao .)
    $end            reduce using rule 8 (inicializacao_variaveis -> atribuicao .)


state 12

    (37) atribuicao -> var . ATRIBUICAO expressao

    ATRIBUICAO      shift and go to state 21


state 13

    (4) declaracao -> declaracao_variaveis .

    INTEIRO         reduce using rule 4 (declaracao -> declaracao_variaveis .)
    FLUTUANTE       reduce using rule 4 (declaracao -> declaracao_variaveis .)
    ID              reduce using rule 4 (declaracao -> declaracao_variaveis .)
    $end            reduce using rule 4 (declaracao -> declaracao_variaveis .)


state 14

    (2) lista_declaracoes -> lista_declaracoes declaracao .

    INTEIRO         reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)
    FLUTUANTE       reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)
    ID              reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)
    $end            reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)


state 15

    (19) cabecalho -> ID . ABRE_PARENTESE lista_parametros FECHA_PARENTESE corpo FIM

    ABRE_PARENTESE  shift and go to state 19


state 16

    (7) declaracao_variaveis -> tipo DOIS_PONTOS . lista_variaveis
    (9) lista_variaveis -> . lista_variaveis VIRGULA var
    (10) lista_variaveis -> . var
    (11) var -> . ID
    (12) var -> . ID indice

    ID              shift and go to state 22

    var                            shift and go to state 23
    lista_variaveis                shift and go to state 24

state 17

    (17) declaracao_funcao -> tipo cabecalho .

    INTEIRO         reduce using rule 17 (declaracao_funcao -> tipo cabecalho .)
    FLUTUANTE       reduce using rule 17 (declaracao_funcao -> tipo cabecalho .)
    ID              reduce using rule 17 (declaracao_funcao -> tipo cabecalho .)
    $end            reduce using rule 17 (declaracao_funcao -> tipo cabecalho .)


state 18

    (14) indice -> ABRE_COLCHETE . expressao FECHA_COLCHETE
    (41) expressao -> . expressao_logica
    (42) expressao -> . atribuicao
    (43) expressao_logica -> . expressao_simples
    (44) expressao_logica -> . expressao_logica operador_logico expressao_simples
    (37) atribuicao -> . var ATRIBUICAO expressao
    (45) expressao_simples -> . expressao_aditiva
    (46) expressao_simples -> . expressao_simples operador_relacional expressao_aditiva
    (11) var -> . ID
    (12) var -> . ID indice
    (47) expressao_aditiva -> . expressao_multiplicativa
    (48) expressao_aditiva -> . expressao_aditiva operador_soma expressao_multiplicativa
    (49) expressao_multiplicativa -> . expressao_unaria
    (50) expressao_multiplicativa -> . expressao_multiplicativa operador_multiplicacao expressao_unaria
    (51) expressao_unaria -> . fator
    (52) expressao_unaria -> . operador_soma fator
    (53) expressao_unaria -> . operador_negacao fator
    (67) fator -> . ABRE_PARENTESE expressao FECHA_PARENTESE
    (68) fator -> . var
    (69) fator -> . chamada_funcao
    (70) fator -> . numero
    (60) operador_soma -> . MAIS
    (61) operador_soma -> . MENOS
    (64) operador_negacao -> . NEGACAO
    (74) chamada_funcao -> . ID ABRE_PARENTESE lista_argumentos FECHA_PARENTESE
    (71) numero -> . NUM_INTEIRO
    (72) numero -> . NUM_PONTO_FLUTUANTE
    (73) numero -> . NUM_NOTACAO_CIENTIFICA

    ID              shift and go to state 34
    ABRE_PARENTESE  shift and go to state 28
    MAIS            shift and go to state 29
    MENOS           shift and go to state 35
    NEGACAO         shift and go to state 38
    NUM_INTEIRO     shift and go to state 32
    NUM_PONTO_FLUTUANTE shift and go to state 40
    NUM_NOTACAO_CIENTIFICA shift and go to state 26

    numero                         shift and go to state 25
    expressao_aditiva              shift and go to state 27
    chamada_funcao                 shift and go to state 36
    operador_negacao               shift and go to state 43
    fator                          shift and go to state 37
    expressao_simples              shift and go to state 31
    expressao                      shift and go to state 30
    atribuicao                     shift and go to state 41
    expressao_logica               shift and go to state 42
    operador_soma                  shift and go to state 33
    var                            shift and go to state 39
    expressao_multiplicativa       shift and go to state 44
    expressao_unaria               shift and go to state 45

state 19

    (19) cabecalho -> ID ABRE_PARENTESE . lista_parametros FECHA_PARENTESE corpo FIM
    (20) lista_parametros -> . lista_parametros VIRGULA parametro
    (21) lista_parametros -> . parametro
    (22) lista_parametros -> . vazio
    (23) parametro -> . tipo DOIS_PONTOS ID
    (24) parametro -> . parametro ABRE_COLCHETE FECHA_COLCHETE
    (78) vazio -> .
    (15) tipo -> . INTEIRO
    (16) tipo -> . FLUTUANTE

    FECHA_PARENTESE reduce using rule 78 (vazio -> .)
    VIRGULA         reduce using rule 78 (vazio -> .)
    INTEIRO         shift and go to state 2
    FLUTUANTE       shift and go to state 8

    tipo                           shift and go to state 47
    parametro                      shift and go to state 48
    vazio                          shift and go to state 49
    lista_parametros               shift and go to state 46

state 20

    (12) var -> ID indice .
    (13) indice -> indice . ABRE_COLCHETE expressao FECHA_COLCHETE

    ATRIBUICAO      reduce using rule 12 (var -> ID indice .)
    MULTIPLICACAO   reduce using rule 12 (var -> ID indice .)
    DIVISAO         reduce using rule 12 (var -> ID indice .)
    MAIS            reduce using rule 12 (var -> ID indice .)
    MENOS           reduce using rule 12 (var -> ID indice .)
    MENOR           reduce using rule 12 (var -> ID indice .)
    MAIOR           reduce using rule 12 (var -> ID indice .)
    IGUAL           reduce using rule 12 (var -> ID indice .)
    DIFERENCA       reduce using rule 12 (var -> ID indice .)
    MENOR_IGUAL     reduce using rule 12 (var -> ID indice .)
    MAIOR_IGUAL     reduce using rule 12 (var -> ID indice .)
    E_LOGICO        reduce using rule 12 (var -> ID indice .)
    OU_LOGICO       reduce using rule 12 (var -> ID indice .)
    FIM             reduce using rule 12 (var -> ID indice .)
    SENAO           reduce using rule 12 (var -> ID indice .)
    SE              reduce using rule 12 (var -> ID indice .)
    REPITA          reduce using rule 12 (var -> ID indice .)
    LEIA            reduce using rule 12 (var -> ID indice .)
    ESCREVA         reduce using rule 12 (var -> ID indice .)
    RETORNA         reduce using rule 12 (var -> ID indice .)
    INTEIRO         reduce using rule 12 (var -> ID indice .)
    FLUTUANTE       reduce using rule 12 (var -> ID indice .)
    ID              reduce using rule 12 (var -> ID indice .)
    ABRE_PARENTESE  reduce using rule 12 (var -> ID indice .)
    NEGACAO         reduce using rule 12 (var -> ID indice .)
    NUM_INTEIRO     reduce using rule 12 (var -> ID indice .)
    NUM_PONTO_FLUTUANTE reduce using rule 12 (var -> ID indice .)
    NUM_NOTACAO_CIENTIFICA reduce using rule 12 (var -> ID indice .)
    FECHA_PARENTESE reduce using rule 12 (var -> ID indice .)
    ENTAO           reduce using rule 12 (var -> ID indice .)
    FECHA_COLCHETE  reduce using rule 12 (var -> ID indice .)
    $end            reduce using rule 12 (var -> ID indice .)
    VIRGULA         reduce using rule 12 (var -> ID indice .)
    ATE             reduce using rule 12 (var -> ID indice .)
    ABRE_COLCHETE   shift and go to state 50


state 21

    (37) atribuicao -> var ATRIBUICAO . expressao
    (41) expressao -> . expressao_logica
    (42) expressao -> . atribuicao
    (43) expressao_logica -> . expressao_simples
    (44) expressao_logica -> . expressao_logica operador_logico expressao_simples
    (37) atribuicao -> . var ATRIBUICAO expressao
    (45) expressao_simples -> . expressao_aditiva
    (46) expressao_simples -> . expressao_simples operador_relacional expressao_aditiva
    (11) var -> . ID
    (12) var -> . ID indice
    (47) expressao_aditiva -> . expressao_multiplicativa
    (48) expressao_aditiva -> . expressao_aditiva operador_soma expressao_multiplicativa
    (49) expressao_multiplicativa -> . expressao_unaria
    (50) expressao_multiplicativa -> . expressao_multiplicativa operador_multiplicacao expressao_unaria
    (51) expressao_unaria -> . fator
    (52) expressao_unaria -> . operador_soma fator
    (53) expressao_unaria -> . operador_negacao fator
    (67) fator -> . ABRE_PARENTESE expressao FECHA_PARENTESE
    (68) fator -> . var
    (69) fator -> . chamada_funcao
    (70) fator -> . numero
    (60) operador_soma -> . MAIS
    (61) operador_soma -> . MENOS
    (64) operador_negacao -> . NEGACAO
    (74) chamada_funcao -> . ID ABRE_PARENTESE lista_argumentos FECHA_PARENTESE
    (71) numero -> . NUM_INTEIRO
    (72) numero -> . NUM_PONTO_FLUTUANTE
    (73) numero -> . NUM_NOTACAO_CIENTIFICA

    ID              shift and go to state 34
    ABRE_PARENTESE  shift and go to state 28
    MAIS            shift and go to state 29
    MENOS           shift and go to state 35
    NEGACAO         shift and go to state 38
    NUM_INTEIRO     shift and go to state 32
    NUM_PONTO_FLUTUANTE shift and go to state 40
    NUM_NOTACAO_CIENTIFICA shift and go to state 26

    numero                         shift and go to state 25
    expressao_aditiva              shift and go to state 27
    chamada_funcao                 shift and go to state 36
    operador_negacao               shift and go to state 43
    fator                          shift and go to state 37
    expressao_simples              shift and go to state 31
    expressao                      shift and go to state 51
    atribuicao                     shift and go to state 41
    expressao_logica               shift and go to state 42
    operador_soma                  shift and go to state 33
    var                            shift and go to state 39
    expressao_multiplicativa       shift and go to state 44
    expressao_unaria               shift and go to state 45

state 22

    (11) var -> ID .
    (12) var -> ID . indice
    (13) indice -> . indice ABRE_COLCHETE expressao FECHA_COLCHETE
    (14) indice -> . ABRE_COLCHETE expressao FECHA_COLCHETE

    VIRGULA         reduce using rule 11 (var -> ID .)
    INTEIRO         reduce using rule 11 (var -> ID .)
    FLUTUANTE       reduce using rule 11 (var -> ID .)
    ID              reduce using rule 11 (var -> ID .)
    $end            reduce using rule 11 (var -> ID .)
    FIM             reduce using rule 11 (var -> ID .)
    SE              reduce using rule 11 (var -> ID .)
    REPITA          reduce using rule 11 (var -> ID .)
    LEIA            reduce using rule 11 (var -> ID .)
    ESCREVA         reduce using rule 11 (var -> ID .)
    RETORNA         reduce using rule 11 (var -> ID .)
    ABRE_PARENTESE  reduce using rule 11 (var -> ID .)
    MAIS            reduce using rule 11 (var -> ID .)
    MENOS           reduce using rule 11 (var -> ID .)
    NEGACAO         reduce using rule 11 (var -> ID .)
    NUM_INTEIRO     reduce using rule 11 (var -> ID .)
    NUM_PONTO_FLUTUANTE reduce using rule 11 (var -> ID .)
    NUM_NOTACAO_CIENTIFICA reduce using rule 11 (var -> ID .)
    ATE             reduce using rule 11 (var -> ID .)
    SENAO           reduce using rule 11 (var -> ID .)
    FECHA_PARENTESE reduce using rule 11 (var -> ID .)
    ABRE_COLCHETE   shift and go to state 18

    indice                         shift and go to state 20

state 23

    (10) lista_variaveis -> var .

    VIRGULA         reduce using rule 10 (lista_variaveis -> var .)
    INTEIRO         reduce using rule 10 (lista_variaveis -> var .)
    FLUTUANTE       reduce using rule 10 (lista_variaveis -> var .)
    ID              reduce using rule 10 (lista_variaveis -> var .)
    $end            reduce using rule 10 (lista_variaveis -> var .)
    FIM             reduce using rule 10 (lista_variaveis -> var .)
    SE              reduce using rule 10 (lista_variaveis -> var .)
    REPITA          reduce using rule 10 (lista_variaveis -> var .)
    LEIA            reduce using rule 10 (lista_variaveis -> var .)
    ESCREVA         reduce using rule 10 (lista_variaveis -> var .)
    RETORNA         reduce using rule 10 (lista_variaveis -> var .)
    ABRE_PARENTESE  reduce using rule 10 (lista_variaveis -> var .)
    MAIS            reduce using rule 10 (lista_variaveis -> var .)
    MENOS           reduce using rule 10 (lista_variaveis -> var .)
    NEGACAO         reduce using rule 10 (lista_variaveis -> var .)
    NUM_INTEIRO     reduce using rule 10 (lista_variaveis -> var .)
    NUM_PONTO_FLUTUANTE reduce using rule 10 (lista_variaveis -> var .)
    NUM_NOTACAO_CIENTIFICA reduce using rule 10 (lista_variaveis -> var .)
    ATE             reduce using rule 10 (lista_variaveis -> var .)
    SENAO           reduce using rule 10 (lista_variaveis -> var .)


state 24

    (7) declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .
    (9) lista_variaveis -> lista_variaveis . VIRGULA var

    FIM             reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    SE              reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    REPITA          reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    LEIA            reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    ESCREVA         reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    RETORNA         reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    INTEIRO         reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    FLUTUANTE       reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    ID              reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    ABRE_PARENTESE  reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    MAIS            reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    MENOS           reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    NEGACAO         reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    NUM_INTEIRO     reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    NUM_PONTO_FLUTUANTE reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    NUM_NOTACAO_CIENTIFICA reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    ATE             reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    $end            reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    SENAO           reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    VIRGULA         shift and go to state 52


state 25

    (70) fator -> numero .

    MULTIPLICACAO   reduce using rule 70 (fator -> numero .)
    DIVISAO         reduce using rule 70 (fator -> numero .)
    MAIS            reduce using rule 70 (fator -> numero .)
    MENOS           reduce using rule 70 (fator -> numero .)
    MENOR           reduce using rule 70 (fator -> numero .)
    MAIOR           reduce using rule 70 (fator -> numero .)
    IGUAL           reduce using rule 70 (fator -> numero .)
    DIFERENCA       reduce using rule 70 (fator -> numero .)
    MENOR_IGUAL     reduce using rule 70 (fator -> numero .)
    MAIOR_IGUAL     reduce using rule 70 (fator -> numero .)
    E_LOGICO        reduce using rule 70 (fator -> numero .)
    OU_LOGICO       reduce using rule 70 (fator -> numero .)
    FIM             reduce using rule 70 (fator -> numero .)
    SENAO           reduce using rule 70 (fator -> numero .)
    SE              reduce using rule 70 (fator -> numero .)
    REPITA          reduce using rule 70 (fator -> numero .)
    LEIA            reduce using rule 70 (fator -> numero .)
    ESCREVA         reduce using rule 70 (fator -> numero .)
    RETORNA         reduce using rule 70 (fator -> numero .)
    INTEIRO         reduce using rule 70 (fator -> numero .)
    FLUTUANTE       reduce using rule 70 (fator -> numero .)
    ID              reduce using rule 70 (fator -> numero .)
    ABRE_PARENTESE  reduce using rule 70 (fator -> numero .)
    NEGACAO         reduce using rule 70 (fator -> numero .)
    NUM_INTEIRO     reduce using rule 70 (fator -> numero .)
    NUM_PONTO_FLUTUANTE reduce using rule 70 (fator -> numero .)
    NUM_NOTACAO_CIENTIFICA reduce using rule 70 (fator -> numero .)
    FECHA_COLCHETE  reduce using rule 70 (fator -> numero .)
    $end            reduce using rule 70 (fator -> numero .)
    FECHA_PARENTESE reduce using rule 70 (fator -> numero .)
    VIRGULA         reduce using rule 70 (fator -> numero .)
    ENTAO           reduce using rule 70 (fator -> numero .)
    ATE             reduce using rule 70 (fator -> numero .)


state 26

    (73) numero -> NUM_NOTACAO_CIENTIFICA .

    MULTIPLICACAO   reduce using rule 73 (numero -> NUM_NOTACAO_CIENTIFICA .)
    DIVISAO         reduce using rule 73 (numero -> NUM_NOTACAO_CIENTIFICA .)
    MAIS            reduce using rule 73 (numero -> NUM_NOTACAO_CIENTIFICA .)
    MENOS           reduce using rule 73 (numero -> NUM_NOTACAO_CIENTIFICA .)
    MENOR           reduce using rule 73 (numero -> NUM_NOTACAO_CIENTIFICA .)
    MAIOR           reduce using rule 73 (numero -> NUM_NOTACAO_CIENTIFICA .)
    IGUAL           reduce using rule 73 (numero -> NUM_NOTACAO_CIENTIFICA .)
    DIFERENCA       reduce using rule 73 (numero -> NUM_NOTACAO_CIENTIFICA .)
    MENOR_IGUAL     reduce using rule 73 (numero -> NUM_NOTACAO_CIENTIFICA .)
    MAIOR_IGUAL     reduce using rule 73 (numero -> NUM_NOTACAO_CIENTIFICA .)
    E_LOGICO        reduce using rule 73 (numero -> NUM_NOTACAO_CIENTIFICA .)
    OU_LOGICO       reduce using rule 73 (numero -> NUM_NOTACAO_CIENTIFICA .)
    FECHA_PARENTESE reduce using rule 73 (numero -> NUM_NOTACAO_CIENTIFICA .)
    FIM             reduce using rule 73 (numero -> NUM_NOTACAO_CIENTIFICA .)
    SE              reduce using rule 73 (numero -> NUM_NOTACAO_CIENTIFICA .)
    REPITA          reduce using rule 73 (numero -> NUM_NOTACAO_CIENTIFICA .)
    LEIA            reduce using rule 73 (numero -> NUM_NOTACAO_CIENTIFICA .)
    ESCREVA         reduce using rule 73 (numero -> NUM_NOTACAO_CIENTIFICA .)
    RETORNA         reduce using rule 73 (numero -> NUM_NOTACAO_CIENTIFICA .)
    INTEIRO         reduce using rule 73 (numero -> NUM_NOTACAO_CIENTIFICA .)
    FLUTUANTE       reduce using rule 73 (numero -> NUM_NOTACAO_CIENTIFICA .)
    ID              reduce using rule 73 (numero -> NUM_NOTACAO_CIENTIFICA .)
    ABRE_PARENTESE  reduce using rule 73 (numero -> NUM_NOTACAO_CIENTIFICA .)
    NEGACAO         reduce using rule 73 (numero -> NUM_NOTACAO_CIENTIFICA .)
    NUM_INTEIRO     reduce using rule 73 (numero -> NUM_NOTACAO_CIENTIFICA .)
    NUM_PONTO_FLUTUANTE reduce using rule 73 (numero -> NUM_NOTACAO_CIENTIFICA .)
    NUM_NOTACAO_CIENTIFICA reduce using rule 73 (numero -> NUM_NOTACAO_CIENTIFICA .)
    FECHA_COLCHETE  reduce using rule 73 (numero -> NUM_NOTACAO_CIENTIFICA .)
    $end            reduce using rule 73 (numero -> NUM_NOTACAO_CIENTIFICA .)
    VIRGULA         reduce using rule 73 (numero -> NUM_NOTACAO_CIENTIFICA .)
    ENTAO           reduce using rule 73 (numero -> NUM_NOTACAO_CIENTIFICA .)
    ATE             reduce using rule 73 (numero -> NUM_NOTACAO_CIENTIFICA .)
    SENAO           reduce using rule 73 (numero -> NUM_NOTACAO_CIENTIFICA .)


state 27
